refactor: disable importer
As we run always green-field for our benchmarks, we should verify that
Exporter can run without importer.

--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -275,6 +275,9 @@ camunda-platform:
       limits:
         cpu: 2000m
         memory: 2Gi
+    env:
+      - name: CAMUNDA_OPERATE_IMPORTERENABLED
+        value: "false"
 
   # ELASTIC
   elasticsearch:
