--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -273,7 +273,7 @@ camunda-platform:
         memory: 2Gi
     env:
       - name: CAMUNDA_OPERATE_IMPORTERENABLED
-        value: false
+        value: "false"
 
   # ELASTIC
   elasticsearch:
