fix: increase worker threads
Use higher thread count and capacity for some jobs,
that seem to be take longer and be delayed otherwise

--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -87,7 +87,9 @@ workers:
     # Workers.benchmark.replicas defines how many replicas of the benchmark worker should be deployed
     replicas: 1
     # Workers.benchmark.capacity defines how many jobs the worker should activate and work on
-    capacity: 30
+    capacity: 60
+    # Workers.benchmark.threads defines how many threads the worker can use to work on jobs
+    threads: 30
     # Workers.benchmark.jobType defines the job type which should be used by the worker
     jobType: "dispute_process_request_proof_from_vendor"
     # Workers.benchmark.payloadPath defines the path (inside the worker app) to the payload resource
@@ -143,6 +145,8 @@ workers:
     replicas: 1
     # Workers.benchmark.capacity defines how many jobs the worker should activate and work on
     capacity: 30
+    # Workers.benchmark.threads defines how many threads the worker can use to work on jobs
+    threads: 30
     # Workers.benchmark.jobType defines the job type which should be used by the worker
     jobType: "refunding"
     # Workers.benchmark.payloadPath defines the path (inside the worker app) to the payload resource
