fix: regen threads

--- a/charts/zeebe-benchmark/test/golden/workers.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/workers.golden.yaml
@@ -28,6 +28,7 @@ spec:
                 -Dapp.brokerUrl=benchmark-test-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
                 -Dapp.worker.capacity=60
+                -Dapp.worker.threads=10
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
                 -Dapp.worker.workerName="benchmark"
