test: update golden tests
CamundaExporter is enabled per default

--- a/charts/zeebe-benchmark/test/golden/c8-zeebe-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-zeebe-configmap.golden.yaml
@@ -27,6 +27,17 @@ data:
                 enabled: true
                 minimumAge: "10m"
                 policyName: "zeebe-record-retention-policy"
+          CamundaExporter:
+            className: "io.camunda.exporter.CamundaExporter"
+            args:
+              connect:
+                type: elasticsearch
+                url: "http://benchmark-test-elasticsearch:9200"
+              retention:
+                enabled: true
+                minimumAge: "10m"
+                policyName: "zeebe-record-retention-policy"
+              createSchema: true
         gateway:
           enable: true
           network:
