--- a/charts/zeebe-benchmark/test/golden/c8-zeebe-service.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-zeebe-service.golden.yaml
@@ -1,24 +1,24 @@
 ---
-# Source: zeebe-benchmark/charts/camunda-platform/templates/zeebe/service.yaml
+# Source: zeebe-benchmark/charts/camunda-platform/templates/core/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: "benchmark-test-zeebe"
+  name: benchmark-test-core
   labels:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/component: zeebe-broker
-    app.kubernetes.io/version: "SNAPSHOT"
+    app.kubernetes.io/component: core
+    app.kubernetes.io/version: "8.7.0-alpha1"
   annotations:
 spec:
   clusterIP: None
   publishNotReadyAddresses: true
   type: ClusterIP
   ports:
-    - port: 9600
+    - port: 8080
       protocol: TCP
       name: http
     - port: 26502
@@ -27,10 +27,16 @@ spec:
     - port: 26501
       protocol: TCP
       name: command
+    - port: 9600
+      protocol: TCP
+      name: server
+    - port: 26500
+      protocol: TCP
+      name: gateway
   selector:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/component: zeebe-broker
+    app.kubernetes.io/component: core
