--- a/charts/zeebe-benchmark/test/golden/c8-zeebe-statefulset.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-zeebe-statefulset.golden.yaml
@@ -1,17 +1,17 @@
 ---
-# Source: zeebe-benchmark/charts/camunda-platform/templates/zeebe/statefulset.yaml
+# Source: zeebe-benchmark/charts/camunda-platform/templates/core/statefulset.yaml
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: "benchmark-test-zeebe"
+  name: benchmark-test-core
   labels:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
     app.kubernetes.io/instance: benchmark-test
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: camunda-platform
-    app.kubernetes.io/component: zeebe-broker
-    app.kubernetes.io/version: "SNAPSHOT"
+    app.kubernetes.io/component: core
+    app.kubernetes.io/version: "8.7.0-alpha1"
   annotations:
 spec:
   replicas: 3
@@ -22,8 +22,8 @@ spec:
       app.kubernetes.io/instance: benchmark-test
       app.kubernetes.io/managed-by: Helm
       app.kubernetes.io/part-of: camunda-platform
-      app.kubernetes.io/component: zeebe-broker
-  serviceName: "benchmark-test-zeebe"
+      app.kubernetes.io/component: core
+  serviceName: benchmark-test-core
   updateStrategy:
     type: RollingUpdate
   podManagementPolicy: Parallel
@@ -35,41 +35,28 @@ spec:
         app.kubernetes.io/instance: benchmark-test
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/part-of: camunda-platform
-        app.kubernetes.io/component: zeebe-broker
-        app.kubernetes.io/version: "SNAPSHOT"
+        app.kubernetes.io/component: core
+        app.kubernetes.io/version: "8.7.0-alpha1"
       annotations:
-        checksum/config: 4e7d66ef2c5cc5b5153ce41dd3b77c26d1ebea04c443bb81cbb8ec00a96462b1
+        checksum/config: 0af99dfd865b4e2b8dcd8ea4defec2b16e5ffee41fa37cedc969f502c6d3824e
     spec:
       imagePullSecrets:
         []
       initContainers:
-        - command:
-          - wget
-          - https://github.com/pyroscope-io/pyroscope-java/releases/latest/download/pyroscope.jar
-          - -O
-          - /pyroscope/pyroscope.jar
-          image: alpine
-          name: pyroscope
+        []
+      containers:
+        - name: core
+          image: camunda/camunda:8.7.0-alpha1
+          imagePullPolicy: Always
           securityContext:
             allowPrivilegeEscalation: false
             privileged: false
             readOnlyRootFilesystem: true
-            runAsUser: 1000
-          volumeMounts:
-          - mountPath: /pyroscope
-            name: pyroscope
-      containers:
-        - name: zeebe
-          image: camunda/zeebe:SNAPSHOT
-          imagePullPolicy: Always
-          securityContext:
-            allowPrivilegeEscalation: true
-            privileged: true
-            readOnlyRootFilesystem: true
             runAsNonRoot: true
-            runAsUser: 1000
+            runAsUser: 1001
             seccompProfile:
               type: RuntimeDefault
+          command: ["bash", "/usr/local/bin/startup.sh"]
           env:
             - name: CAMUNDA_LICENSE_KEY
               valueFrom:
@@ -83,85 +70,33 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: K8S_SERVICE_NAME
-              value: "benchmark-test-zeebe"
+              value: benchmark-test-core
             - name: K8S_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: ZEEBE_BROKER_NETWORK_ADVERTISEDHOST
-              value: "$(K8S_NAME).$(K8S_SERVICE_NAME)"
-            - name: ZEEBE_BROKER_CLUSTER_INITIALCONTACTPOINTS
-              value:
-                $(K8S_SERVICE_NAME)-0.$(K8S_SERVICE_NAME):26502,
-                $(K8S_SERVICE_NAME)-1.$(K8S_SERVICE_NAME):26502,
-                $(K8S_SERVICE_NAME)-2.$(K8S_SERVICE_NAME):26502,
-            - name: ZEEBE_LOG_LEVEL
-              value: "info"
-            - name: ZEEBE_BROKER_GATEWAY_ENABLE
-              value: "false"
-            - name: ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_CLASSNAME
-              value: "io.camunda.zeebe.exporter.ElasticsearchExporter"
-            - name: ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_ARGS_URL
-              value: "http://benchmark-test-elasticsearch:9200"
-            - name: ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_ARGS_INDEX_PREFIX
-              value: "zeebe-record"
+            - name: VALUES_CAMUNDA_CORE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: benchmark-test-core-identity-secret
+                  key: core-secret
             - name: JAVA_TOOL_OPTIONS
-              value: "-XX:MaxRAMPercentage=25.0 -XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/zeebe/data -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log -Xlog:gc*:file=/usr/local/zeebe/data/gc.log:time:filecount=7,filesize=8M"
+              value: "-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/zeebe/data -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log -XX:+ExitOnOutOfMemoryError"
             - name: K8S_POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: K8S_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: K8S_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: ZEEBE_LOG_APPENDER
-              value: Stackdriver
-            - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
-              value: zeebe
-            - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: ATOMIX_LOG_LEVEL
-              value: INFO
-            - name: ZEEBE_LOG_LEVEL
-              value: DEBUG
-            - name: PYROSCOPE_SERVER_ADDRESS
-              value: http://pyroscope.pyroscope.svc.cluster.local:4040
-            - name: PYROSCOPE_APPLICATION_NAME
-              value: io.camunda.zeebe.broker
-            - name: PYROSCOPE_LOG_LEVEL
-              value: debug
-            - name: PYROSCOPE_FORMAT
-              value: jfr
-            - name: PYROSCOPE_PROFILER_EVENT
-              value: cpu
-            - name: PYROSCOPE_PROFILER_ALLOC
-              value: "0"
-            - name: PYROSCOPE_PROFILER_LOCK
-              value: "0"
-            - name: PYROSCOPE_LABELS
-              value: namespace=$(K8S_NAMESPACE), pod=$(K8S_NAME)
-            - name: SPRING_CONFIG_ADDITIONALLOCATION
-              value: /usr/local/zeebe/config/benchmark-config.yaml
-            - name: JAVA_OPTS
-              valueFrom:
-                configMapKeyRef:
-                  key: java-opts
-                  name: zeebe-config
-                  optional: true
           ports:
-            - containerPort: 9600
+            - containerPort: 8080
               name: http
             - containerPort: 26501
               name: command
             - containerPort: 26502
               name: internal
+            - containerPort: 9600
+              name: server
+            - containerPort: 26500
+              name: gateway
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
@@ -174,54 +109,39 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: 1700m
-              memory: 4Gi
+              cpu: 960m
+              memory: 1920Mi
             requests:
-              cpu: 1350m
-              memory: 4Gi
+              cpu: 800m
+              memory: 1200Mi
           volumeMounts:
             - name: config
               mountPath: /usr/local/bin/startup.sh
               subPath: startup.sh
             - name: data
-              mountPath: /usr/local/zeebe/data
+              mountPath: /usr/local/camunda/data
             - name: exporters
               mountPath: /exporters
             - mountPath: /tmp
               name: tmp
             - name: config
-              mountPath: /usr/local/zeebe/config/application.yaml
+              mountPath: /usr/local/camunda/config/application.yaml
               subPath: application.yaml
-            
-            - mountPath: /usr/local/zeebe/config/benchmark-config.yaml
-              name: benchmark-config
-              subPath: benchmark-config.yaml
-            - mountPath: /pyroscope
-              name: pyroscope
       volumes:
         - name: config
           configMap:
-            name: benchmark-test-zeebe-configuration
+            name: benchmark-test-core-configuration
             defaultMode: 492
         - name: exporters
           emptyDir: {}
         - name: tmp
           emptyDir: {}
-          
-        - configMap:
-            defaultMode: 492
-            name: benchmark-config
-          name: benchmark-config
-        - emptyDir: {}
-          name: pyroscope
-      serviceAccountName: benchmark-test-zeebe
+      serviceAccountName: benchmark-test-core
       securityContext:
         fsGroup: 1001
         runAsNonRoot: true
         seccompProfile:
           type: RuntimeDefault
-      nodeSelector:
-        cloud.google.com/gke-nodepool: n2-standard-2
 # yamllint disable
       affinity:
         podAntiAffinity:
@@ -231,7 +151,7 @@ spec:
               - key: app.kubernetes.io/component
                 operator: In
                 values:
-                - zeebe-broker
+                - core
             topologyKey: kubernetes.io/hostname
 # yamllint enable
   volumeClaimTemplates:
@@ -241,7 +161,6 @@ spec:
           {}
       spec:
         accessModes: [ReadWriteOnce]
-        storageClassName: ssd
         resources:
           requests:
-            storage: "48Gi"
+            storage: "32Gi"
