--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -35,10 +35,11 @@ global:
     tag: SNAPSHOT
     # Image.pullPolicy defines the image pull policy which should be used https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
     pullPolicy: Always
-  # Disable Identity completely; both this flag and `camunda-platform.identity.enabled` are required.
+  # Disable Identity
   identity:
     auth:
       enabled: false
+
 
 # Saas configuration to run benchmarks against Camunda SaaS environment
 saas:
@@ -193,18 +194,9 @@ zeebe:
     enabled: false
 
 camunda-platform:
-  enabled: true
-  global:
-    image:
-      tag: SNAPSHOT
-      pullPolicy: Always
+  core:
+    enabled: true
 
-  zeebe:
-    # Image configuration to configure the zeebe image specifics
-    image:
-      # Image.repository defines which image repository to use
-      repository: camunda/zeebe
-      tag: SNAPSHOT
     # ClusterSize defines the amount of brokers (=replicas), which are deployed via helm
     clusterSize: "3"
     # PartitionCount defines how many zeebe partitions are set up in the cluster
@@ -235,9 +227,9 @@ camunda-platform:
       -XX:MaxRAMPercentage=25.0
       -XX:+ExitOnOutOfMemoryError
       -XX:+HeapDumpOnOutOfMemoryError
-      -XX:HeapDumpPath=/usr/local/zeebe/data
-      -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log
-      -Xlog:gc*:file=/usr/local/zeebe/data/gc.log:time:filecount=7,filesize=8M
+      -XX:HeapDumpPath=/usr/local/camunda/data
+      -XX:ErrorFile=/usr/local/camunda/data/zeebe_error%p.log
+      -Xlog:gc*:file=/usr/local/camunda/data/gc.log:time:filecount=7,filesize=8M
 
     # Zeebe config
     extraVolumes:
@@ -250,7 +242,7 @@ camunda-platform:
 
     extraVolumeMounts:
       - name: benchmark-config
-        mountPath: /usr/local/zeebe/config/benchmark-config.yaml
+        mountPath: /usr/local/camunda/config/benchmark-config.yaml
         subPath: benchmark-config.yaml
       - name: pyroscope
         mountPath: /pyroscope
@@ -322,13 +314,16 @@ camunda-platform:
       # To be able to load a separate/additional configuration
       # See https://github.com/camunda/camunda-platform-helm/issues/2197
       - name: SPRING_CONFIG_ADDITIONALLOCATION
-        value: "/usr/local/zeebe/config/benchmark-config.yaml"
+        value: "/usr/local/camunda/config/benchmark-config.yaml"
       - name: JAVA_OPTS
         valueFrom:
           configMapKeyRef:
             name: zeebe-config
             key: java-opts
             optional: true
+      # To run Operate and Tasklist add these to the value of this variable
+      - name: SPRING_PROFILES_ACTIVE
+        value: "auth,broker"
 
     # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limitsS
     resources:
@@ -343,142 +338,12 @@ camunda-platform:
       cloud.google.com/gke-nodepool: n2-standard-2
 
     # PvcAccessModes can be used to configure the persistent volume claim access mode https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
-    pvcAccessMode: [ "ReadWriteOnce" ]
-    # PvcSize defines the persistent volume claim size, which is used by each broker pod https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
-    pvcSize: 48Gi
+    pvc:
+     accessModes: [ "ReadWriteOnce" ]
+     # PvcSize defines the persistent volume claim size, which is used by each broker pod https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
+     size: 48Gi
     # PvcStorageClassName can be used to set the storage class name which should be used by the persistent volume claim. It is recommended to use a storage class, which is backed with a SSD.
-    pvcStorageClassName: ssd
-
-  zeebeGateway:
-    # Replicas defines how many standalone gateways are deployed
-    replicas: 2
-
-    # Image configuration to configure the zeebe-gateway image specifics
-    image:
-      # Image.repository defines which image repository to use
-      repository: camunda/zeebe
-      tag: SNAPSHOT
-    # LogLevel defines the log level which is used by the gateway
-    logLevel: debug
-
-    extraVolumes:
-      - name: benchmark-config
-        configMap:
-          name: benchmark-config
-          defaultMode: 0754
-      - name: pyroscope
-        emptyDir: {}
-
-    extraVolumeMounts:
-      - name: pyroscope
-        mountPath: /pyroscope
-      - name: benchmark-config
-        mountPath: /usr/local/zeebe/config/benchmark-config.yaml
-        subPath: benchmark-config.yaml
-
-    extraInitContainers:
-      - name: pyroscope
-        image: alpine
-        command: ['wget', 'https://github.com/pyroscope-io/pyroscope-java/releases/latest/download/pyroscope.jar', '-O', '/pyroscope/pyroscope.jar']
-        volumeMounts:
-          - name: pyroscope
-            mountPath: /pyroscope
-        securityContext:
-          ## @param zeebe.containerSecurityContext.allowPrivilegeEscalation
-          allowPrivilegeEscalation: false
-          ## @param zeebe.containerSecurityContext.privileged
-          privileged: false
-          ## @param zeebe.containerSecurityContext.readOnlyRootFilesystem
-          readOnlyRootFilesystem: true
-          ## @param zeebe.containerSecurityContext.runAsUser
-          runAsUser: 1000
-
-    # Env can be used to set extra environment variables in each gateway container
-    env:
-      - name: ZEEBE_LOG_APPENDER
-        value: Stackdriver
-      - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
-        value: zeebe
-      - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace
-      - name: ATOMIX_LOG_LEVEL
-        value: INFO
-      - name: ZEEBE_LOG_LEVEL
-        value: DEBUG
-      - name: PYROSCOPE_SERVER_ADDRESS
-        value: "http://pyroscope.pyroscope.svc.cluster.local:4040"
-      - name: PYROSCOPE_APPLICATION_NAME
-        value: "io.camunda.zeebe.gateway"
-      - name: PYROSCOPE_LOG_LEVEL
-        value: "debug"
-      - name: PYROSCOPE_FORMAT
-        value: "jfr"
-      - name: PYROSCOPE_PROFILER_EVENT
-        value: "cpu"
-      - name: PYROSCOPE_PROFILER_ALLOC
-        value: "0"
-      - name: PYROSCOPE_PROFILER_LOCK
-        value: "0"
-      - name: PYROSCOPE_LABELS
-        value: "namespace=$(K8S_NAMESPACE), pod=$(K8S_NAME)"
-      # To be able to load a separate/additional configuration
-      # See https://github.com/camunda/camunda-platform-helm/issues/2197
-      - name: SPRING_CONFIG_ADDITIONALLOCATION
-        value: "/usr/local/zeebe/config/benchmark-config.yaml"
-      - name: JAVA_OPTS
-        valueFrom:
-          configMapKeyRef:
-            name: zeebe-config
-            key: java-opts
-            optional: true
-
-    # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
-    resources:
-      limits:
-        cpu: 450m
-        memory: 1Gi
-      requests:
-        cpu: 450m
-        memory: 1Gi
-
-  operate:
-    enabled: false
-    image:
-      tag: SNAPSHOT
-    # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
-    resources:
-      requests:
-        cpu: 600m
-        memory: 400Mi
-      limits:
-        cpu: 2000m
-        memory: 2Gi
-
-    # Retention can be used to define the data in Elasticsearch (ILM).
-    retention:
-      ## @param operate.retention.enabled if true, the ILM Policy is created and applied to the index templates.
-      enabled: true
-      ## @param operate.retention.minimumAge defines how old the data must be, before the data is deleted as a duration.
-      minimumAge: 30m # there is no need to keep data longer for our benchmarks, otherwise we will fill up ES pretty quick
-
-    env:
-      - name: OPERATE_LOG_APPENDER
-        value: Stackdriver
-      - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
-        value: operate
-      - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace  
-
-    logging:
-      level:
-        io.camunda.operate: INFO
-
-  tasklist:
-    enabled: false
+     storageClassName: ssd
 
   identity:
     enabled: false
