test: update golden files
I have autogenerated these because there were so many changes

--- a/charts/zeebe-benchmark/test/golden/c8-core-statefulset.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-core-statefulset.golden.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: benchmark-test-core
+  name: benchmark-test-zeebe
   labels:
     app: camunda-platform
     app.kubernetes.io/name: camunda-platform
@@ -38,22 +38,36 @@ spec:
         app.kubernetes.io/component: core
         app.kubernetes.io/version: "8.7.0-alpha1"
       annotations:
-        checksum/config: 0af99dfd865b4e2b8dcd8ea4defec2b16e5ffee41fa37cedc969f502c6d3824e
+        checksum/config: d57a555064a5668dd925af7c3d1e55397fcdb3734f9d3856ff80dcd918ef5ce5
     spec:
       imagePullSecrets:
         []
       initContainers:
-        []
+        - command:
+          - wget
+          - https://github.com/pyroscope-io/pyroscope-java/releases/latest/download/pyroscope.jar
+          - -O
+          - /pyroscope/pyroscope.jar
+          image: alpine
+          name: pyroscope
+          securityContext:
+            allowPrivilegeEscalation: false
+            privileged: false
+            readOnlyRootFilesystem: true
+            runAsUser: 1000
+          volumeMounts:
+          - mountPath: /pyroscope
+            name: pyroscope
       containers:
         - name: core
           image: camunda/camunda:8.7.0-alpha1
           imagePullPolicy: Always
           securityContext:
-            allowPrivilegeEscalation: false
-            privileged: false
+            allowPrivilegeEscalation: true
+            privileged: true
             readOnlyRootFilesystem: true
             runAsNonRoot: true
-            runAsUser: 1001
+            runAsUser: 1000
             seccompProfile:
               type: RuntimeDefault
           command: ["bash", "/usr/local/bin/startup.sh"]
@@ -75,17 +89,58 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: VALUES_CAMUNDA_CORE_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: benchmark-test-core-identity-secret
-                  key: core-secret
             - name: JAVA_TOOL_OPTIONS
-              value: "-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/zeebe/data -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log -XX:+ExitOnOutOfMemoryError"
+              value: "-XX:MaxRAMPercentage=25.0 -XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/camunda/data -XX:ErrorFile=/usr/local/camunda/data/zeebe_error%p.log -Xlog:gc*:file=/usr/local/camunda/data/gc.log:time:filecount=7,filesize=8M"
             - name: K8S_POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: K8S_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: K8S_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: ZEEBE_LOG_APPENDER
+              value: Stackdriver
+            - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
+              value: zeebe
+            - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: ATOMIX_LOG_LEVEL
+              value: INFO
+            - name: ZEEBE_LOG_LEVEL
+              value: DEBUG
+            - name: PYROSCOPE_SERVER_ADDRESS
+              value: http://pyroscope.pyroscope.svc.cluster.local:4040
+            - name: PYROSCOPE_APPLICATION_NAME
+              value: io.camunda.zeebe.broker
+            - name: PYROSCOPE_LOG_LEVEL
+              value: debug
+            - name: PYROSCOPE_FORMAT
+              value: jfr
+            - name: PYROSCOPE_PROFILER_EVENT
+              value: cpu
+            - name: PYROSCOPE_PROFILER_ALLOC
+              value: "0"
+            - name: PYROSCOPE_PROFILER_LOCK
+              value: "0"
+            - name: PYROSCOPE_LABELS
+              value: namespace=$(K8S_NAMESPACE), pod=$(K8S_NAME)
+            - name: SPRING_CONFIG_ADDITIONALLOCATION
+              value: /usr/local/camunda/config/benchmark-config.yaml
+            - name: JAVA_OPTS
+              valueFrom:
+                configMapKeyRef:
+                  key: java-opts
+                  name: zeebe-config
+                  optional: true
+            - name: SPRING_PROFILES_ACTIVE
+              value: auth,broker
           ports:
             - containerPort: 8080
               name: http
@@ -109,11 +164,11 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: 960m
-              memory: 1920Mi
+              cpu: 1700m
+              memory: 4Gi
             requests:
-              cpu: 800m
-              memory: 1200Mi
+              cpu: 1350m
+              memory: 4Gi
           volumeMounts:
             - name: config
               mountPath: /usr/local/bin/startup.sh
@@ -127,6 +182,12 @@ spec:
             - name: config
               mountPath: /usr/local/camunda/config/application.yaml
               subPath: application.yaml
+            
+            - mountPath: /usr/local/camunda/config/benchmark-config.yaml
+              name: benchmark-config
+              subPath: benchmark-config.yaml
+            - mountPath: /pyroscope
+              name: pyroscope
       volumes:
         - name: config
           configMap:
@@ -136,12 +197,21 @@ spec:
           emptyDir: {}
         - name: tmp
           emptyDir: {}
+          
+        - configMap:
+            defaultMode: 492
+            name: benchmark-config
+          name: benchmark-config
+        - emptyDir: {}
+          name: pyroscope
       serviceAccountName: benchmark-test-core
       securityContext:
         fsGroup: 1001
         runAsNonRoot: true
         seccompProfile:
           type: RuntimeDefault
+      nodeSelector:
+        cloud.google.com/gke-nodepool: n2-standard-2
 # yamllint disable
       affinity:
         podAntiAffinity:
@@ -161,6 +231,7 @@ spec:
           {}
       spec:
         accessModes: [ReadWriteOnce]
+        storageClassName: ssd
         resources:
           requests:
-            storage: "32Gi"
+            storage: "48Gi"
