--- a/charts/zeebe-benchmark/test/golden/c8-core-configmap.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/c8-core-configmap.golden.yaml
@@ -16,14 +16,14 @@ data:
   startup.sh: |
     # The Node ID depends on the Pod name so it cannot be templated in the StatefulSet level.
     export ZEEBE_BROKER_CLUSTER_NODEID="${ZEEBE_BROKER_CLUSTER_NODEID:-$[${K8S_NAME##*-} * 1 + 0]}"
-    echo "export ZEEBE_BROKER_CLUSTER_NODEID=${ZEEBE_BROKER_CLUSTER_NODEID}" >> ~/.bashrc
+    echo "export ZEEBE_BROKER_CLUSTER_NODEID=${ZEEBE_BROKER_CLUSTER_NODEID}"
 
     exec /usr/local/camunda/bin/camunda
   application.yaml: |
     
     spring:
       profiles:
-        active: auth
+        active: "operate,tasklist,broker,auth"
 
     management:
       server:
@@ -64,10 +64,13 @@ data:
 
         # zeebe.broker.cluster
         cluster:
+          # The value of "nodeId" is set via the "ZEEBE_BROKER_CLUSTER_NODEID" env var.
+          # As it depends on the Pod name, which cannot be templated at the installation time.
+          # nodeId:
           initialContactPoints:
-            - ${K8S_SERVICE_NAME}-0.${K8S_SERVICE_NAME}:26502
-            - ${K8S_SERVICE_NAME}-1.${K8S_SERVICE_NAME}:26502
-            - ${K8S_SERVICE_NAME}-2.${K8S_SERVICE_NAME}:26502
+            - benchmark-test-zeebe-0.${K8S_SERVICE_NAME}:26502
+            - benchmark-test-zeebe-1.${K8S_SERVICE_NAME}:26502
+            - benchmark-test-zeebe-2.${K8S_SERVICE_NAME}:26502
           clusterSize: "3"
           replicationFactor: "3"
           partitionsCount: "3"
@@ -93,12 +96,20 @@ data:
               url: "http://benchmark-test-elasticsearch:9200"
               index:
                 prefix: "zeebe-record"
+              retention:
+                enabled: true
+                minimumAge: "10m"
+                policyName: "core-record-retention-policy"
           CamundaExporter:
             className: "io.camunda.exporter.CamundaExporter"
             args:
               connect:
                 type: elasticsearch
                 url: "http://benchmark-test-elasticsearch:9200"
+              retention:
+                enabled: true
+                minimumAge: "10m"
+                policyName: "core-record-retention-policy"
               createSchema: true
 
     camunda:
@@ -147,6 +158,9 @@ data:
         zeebe:
           # Gateway address
           gatewayAddress: "benchmark-test-core:26500"
+        archiver:
+          ilmEnabled: true
+          ilmMinAgeForDeleteArchivedIndices: 10m
 
       #
       # Camunda Tasklist Configuration.
@@ -188,5 +202,8 @@ data:
           # Gateway address
           gatewayAddress: benchmark-test-core:26500
           restAddress: "http://benchmark-test-core:8080"
+        archiver:
+          ilmEnabled: true
+          ilmMinAgeForDeleteArchivedIndices: 10m
 
   log4j2.xml: |
