--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -291,6 +291,14 @@ camunda-platform:
         valueFrom:
           fieldRef:
             fieldPath: metadata.namespace
+      - name: OPERATE_LOG_APPENDER
+        value: Stackdriver
+      - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
+        value: operate
+      - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
       - name: ATOMIX_LOG_LEVEL
         value: INFO
       - name: ZEEBE_LOG_LEVEL
