--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -247,11 +247,14 @@ camunda-platform:
     ## @param core.resources.limits.memory
     resources:
       limits:
-        cpu: 2300m
-        memory: 5Gi
+        cpu: 3500m
+        memory: 6Gi
       requests:
-        cpu: 1850m
+        cpu: 2000m
         memory: 5Gi
+
+    nodeSelector:
+      cloud.google.com/gke-nodepool: n2-standard-4
 
   elasticsearch:
     enabled: true
