fix: use 11.1.0 helm chart

--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -9,8 +9,8 @@ sources:
   - https://github.com/camunda/camunda
 dependencies:
   - name: camunda-platform
-    repository: "oci://ghcr.io/camunda/helm"
-    version: "0.0.0-12.0.0-alpha1"
+    repository: "https://helm.camunda.io"
+    version: "11.1.0"
     condition: "camunda.enabled"
   - name: prometheus-elasticsearch-exporter
     repository: "https://prometheus-community.github.io/helm-charts"
