--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -6,9 +6,9 @@ global:
   # Image configuration to be used in each sub chart
   image:
     # Image.repository defines the repository from which to fetch the docker images
-    repository: "camunda/zeebe"
+    repository: "gcr.io/zeebe-io"
     # Image.tag defines the tag / version which should be used in the chart
-    tag: 8.6.6
+    tag: "8.6.7-SNAPSHOT-stable-8.6-65f4acfb"
     # Image.pullPolicy defines the image pull policy which should be used https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
     pullPolicy: Always
   # Disable Identity completely; both this flag and `camunda-platform.identity.enabled` are required.
