fix: use main version tags

--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -8,7 +8,7 @@ global:
     # Image.repository defines the repository from which to fetch the docker images
     repository: "gcr.io/zeebe-io"
     # Image.tag defines the tag / version which should be used in the chart
-    tag: "8.6.7-SNAPSHOT-stable-8.6-65f4acfb"
+    tag: "ck-main-exporter-a1609130"
     # Image.pullPolicy defines the image pull policy which should be used https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
     pullPolicy: Always
   # Disable Identity completely; both this flag and `camunda-platform.identity.enabled` are required.
@@ -224,8 +224,8 @@ camunda-platform:
     # Image configuration to configure the zeebe image specifics
     image:
       # Image.repository defines which image repository to use
-      repository: camunda/zeebe
-      tag: 8.6.6
+      repository: gcr.io/zeebe-io/zeebe
+      tag: ck-main-exporter-a1609130
 
     # Retention can be used to define the data in Elasticsearch (ILM).
     retention:
@@ -250,8 +250,8 @@ camunda-platform:
     # Image configuration to configure the zeebe-gateway image specifics
     image:
       # Image.repository defines which image repository to use
-      repository: camunda/zeebe
-      tag: 8.6.6
+      repository: gcr.io/zeebe-io/zeebe
+      tag: ck-main-exporter-a1609130
 
     # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
     resources:
@@ -265,8 +265,8 @@ camunda-platform:
   operate:
     enabled: true
     image:
-      repository: camunda/operate
-      tag: 8.6.6
+      repository: gcr.io/zeebe-io/operate
+      tag: ck-main-exporter
     # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
     resources:
       requests:
